Social icons, video

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
         <div class="container">
           <div class="video__container">
             <div class="video__item1 video__item">
-              <img src="./assets/image/blog.png" alt="" />
+              <video autoplay loop muted plays-inline class="back-video w-100">
+                <source src="/assets/video1.mp4" type="video/mp4" />
+              </video>
             </div>
             <div class="video__item2 video__item">
               <img src="./assets/image/blog.png" alt="" />
@@ -815,11 +817,21 @@
                 <img src="./assets/logo/LOGO.png" alt="Logo " />
               </div>
               <div class="mt-32 footer__a">
-                <a href="" class="footer__a-items">Link One</a>
-                <a href="" class="footer__a-items">Link Two</a>
-                <a href="" class="footer__a-items">Link Three</a>
-                <a href="" class="footer__a-items">Link Four</a>
-                <a href="" class="footer__a-items">Link Five</a>
+                <a href="" class="footer__a-items">
+                  <img src="/assets/icons/facebook.svg" alt="" />
+                </a>
+                <a href="" class="footer__a-items"
+                  ><img src="/assets/icons/instagram.svg" alt=""
+                /></a>
+                <a href="" class="footer__a-items"
+                  ><img src="/assets/icons/linkedIn.svg" alt=""
+                /></a>
+                <a href="" class="footer__a-items"
+                  ><img src="/assets/icons/youtube.svg" alt=""
+                /></a>
+                <a href="" class="footer__a-items"
+                  ><img src="/assets/icons/twitter.svg" alt=""
+                /></a>
               </div>
             </div>
             <div class="footer__subscribe">
