--- a/index.html
+++ b/index.html
@@ -58,16 +58,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="/html/contact.html">Contact Us</a>
               </li>
-              <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown link
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                      </li> -->
             </ul>
           </div>
         </div>
@@ -76,10 +66,7 @@
 
     <main id="indexPage">
       <!-- Banner -->
-      <div class="banner py-60">
-        <div class="banner__doodle">
-          <img src="./assets/image/banner-doodle.png" alt="" />
-        </div>
+      <div class="banner">
         <div class="container">
           <div class="banner__wrapper">
             <div class="row g-4">
