accordance error fix

--- a/html/service.html
+++ b/html/service.html
@@ -141,7 +141,8 @@
                         aria-expanded="false"
                         aria-controls="flush-collapseTwo"
                       >
-                        <span class="pe-3">2.</span>Accordion Item #2
+                        <span class="pe-3">2.</span>Efficient bookkeeping,
+                        tracking expenses, and managing cash flow.
                       </button>
                     </h2>
                     <div
@@ -168,7 +169,8 @@
                         aria-expanded="false"
                         aria-controls="flush-collapseThree"
                       >
-                        <span class="pe-3">3.</span>Accordion Item #3
+                        <span class="pe-3">3.</span>Efficient bookkeeping,
+                        tracking expenses, and managing cash flow.
                       </button>
                     </h2>
                     <div
@@ -219,23 +221,23 @@
                   id="accordionFlushExample"
                 >
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingOne">
+                    <h2 class="accordion-header" id="flush-headingFour">
                       <button
                         class="accordion-button collapsed text-grey-300"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseOne"
+                        data-bs-target="#flush-collapseFour"
                         aria-expanded="false"
-                        aria-controls="flush-collapseOne"
+                        aria-controls="flush-collapseFour"
                       >
                         <span class="pe-3">1.</span> Efficient bookkeeping,
                         tracking expenses, and managing cash flow.
                       </button>
                     </h2>
                     <div
-                      id="flush-collapseOne"
+                      id="flush-collapseFour"
                       class="accordion-collapse collapse"
-                      aria-labelledby="flush-headingOne"
+                      aria-labelledby="flush-headingFour"
                       data-bs-parent="#accordionFlushExample"
                     >
                       <div class="accordion-body">
@@ -246,22 +248,22 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingTwo">
+                    <h2 class="accordion-header" id="flush-headingFive">
                       <button
                         class="accordion-button collapsed"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseTwo"
+                        data-bs-target="#flush-collapseFive"
                         aria-expanded="false"
-                        aria-controls="flush-collapseTwo"
+                        aria-controls="flush-collapseFive"
                       >
                         <span class="pe-3">2.</span>Accordion Item #2
                       </button>
                     </h2>
                     <div
-                      id="flush-collapseTwo"
+                      id="flush-collapseFive"
                       class="accordion-collapse collapse"
-                      aria-labelledby="flush-headingTwo"
+                      aria-labelledby="flush-headingFive"
                       data-bs-parent="#accordionFlushExample"
                     >
                       <div class="accordion-body">
@@ -273,22 +275,22 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingThree">
+                    <h2 class="accordion-header" id="flush-headingSix">
                       <button
                         class="accordion-button collapsed"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree"
+                        data-bs-target="#flush-collapseSix"
                         aria-expanded="false"
-                        aria-controls="flush-collapseThree"
+                        aria-controls="flush-collapseSix"
                       >
                         <span class="pe-3">3.</span>Accordion Item #3
                       </button>
                     </h2>
                     <div
-                      id="flush-collapseThree"
+                      id="flush-collapseSix"
                       class="accordion-collapse collapse"
-                      aria-labelledby="flush-headingThree"
+                      aria-labelledby="flush-headingSix"
                       data-bs-parent="#accordionFlushExample"
                     >
                       <div class="accordion-body">
@@ -322,23 +324,23 @@
                   id="accordionFlushExample"
                 >
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingOne">
+                    <h2 class="accordion-header" id="flush-headingSeven">
                       <button
                         class="accordion-button collapsed text-grey-300"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseOne"
+                        data-bs-target="#flush-collapseSeven"
                         aria-expanded="false"
-                        aria-controls="flush-collapseOne"
+                        aria-controls="flush-collapseSeven"
                       >
                         <span class="pe-3">1.</span> Efficient bookkeeping,
                         tracking expenses, and managing cash flow.
                       </button>
                     </h2>
                     <div
-                      id="flush-collapseOne"
+                      id="flush-collapseSeven"
                       class="accordion-collapse collapse"
-                      aria-labelledby="flush-headingOne"
+                      aria-labelledby="flush-headingSeven"
                       data-bs-parent="#accordionFlushExample"
                     >
                       <div class="accordion-body">
@@ -349,22 +351,22 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingTwo">
+                    <h2 class="accordion-header" id="flush-headingEight">
                       <button
                         class="accordion-button collapsed"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseTwo"
+                        data-bs-target="#flush-collapseEight"
                         aria-expanded="false"
-                        aria-controls="flush-collapseTwo"
+                        aria-controls="flush-collapseEight"
                       >
                         <span class="pe-3">2.</span>Accordion Item #2
                       </button>
                     </h2>
                     <div
-                      id="flush-collapseTwo"
+                      id="flush-collapseEight"
                       class="accordion-collapse collapse"
-                      aria-labelledby="flush-headingTwo"
+                      aria-labelledby="flush-headingEight"
                       data-bs-parent="#accordionFlushExample"
                     >
                       <div class="accordion-body">
@@ -376,22 +378,22 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="flush-headingThree">
+                    <h2 class="accordion-header" id="flush-headingNine">
                       <button
                         class="accordion-button collapsed"
                         type="button"
                         data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree"
+                        data-bs-target="#flush-collapseNine"
                         aria-expanded="false"
-                        aria-controls="flush-collapseThree"
+                        aria-controls="flush-collapseNine"
                       >
                         <span class="pe-3">3.</span>Accordion Item #3
                       </button>
                     </h2>
                     <div
-                      id="flush-collapseThree"
+                      id="flush-collapseNine"
                       class="accordion-collapse collapse"
-                      aria-labelledby="flush-headingThree"
+                      aria-labelledby="flush-headingNine"
                       data-bs-parent="#accordionFlushExample"
                     >
                       <div class="accordion-body">
