accordance error fix

--- a/html/service.html
+++ b/html/service.html
@@ -257,7 +257,8 @@
                         aria-expanded="false"
                         aria-controls="flush-collapseFive"
                       >
-                        <span class="pe-3">2.</span>Accordion Item #2
+                        <span class="pe-3">2.</span> Efficient bookkeeping,
+                        tracking expenses, and managing cash flow.
                       </button>
                     </h2>
                     <div
@@ -284,7 +285,8 @@
                         aria-expanded="false"
                         aria-controls="flush-collapseSix"
                       >
-                        <span class="pe-3">3.</span>Accordion Item #3
+                        <span class="pe-3">3.</span> Efficient bookkeeping,
+                        tracking expenses, and managing cash flow.
                       </button>
                     </h2>
                     <div
@@ -360,7 +362,8 @@
                         aria-expanded="false"
                         aria-controls="flush-collapseEight"
                       >
-                        <span class="pe-3">2.</span>Accordion Item #2
+                        <span class="pe-3">2.</span> Efficient bookkeeping,
+                        tracking expenses, and managing cash flow.
                       </button>
                     </h2>
                     <div
@@ -387,7 +390,8 @@
                         aria-expanded="false"
                         aria-controls="flush-collapseNine"
                       >
-                        <span class="pe-3">3.</span>Accordion Item #3
+                        <span class="pe-3">3.</span> Efficient bookkeeping,
+                        tracking expenses, and managing cash flow.
                       </button>
                     </h2>
                     <div
