--- a/html/service.html
+++ b/html/service.html
@@ -556,7 +556,7 @@
               <p class="m-0 text-primary-500">Subscribe</p>
               <form action="" class="my-3">
                 <input type="text" placeholder="Write your message" />
-                <button>Button</button>
+                <button class="btn-primary-abcd">Button</button>
               </form>
               <p class="fw-14">
                 By subscribing you agree to with our Privacy Policy
