--- a/html/contact.html
+++ b/html/contact.html
@@ -20,7 +20,7 @@
             ><img src="/assets/logo/LOGO.png" alt="Navbar Logo"
           /></a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler custom-toggler"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNavDropdown"
