--- a/html/service.html
+++ b/html/service.html
@@ -20,7 +20,7 @@
             ><img src="/assets/logo/LOGO.png" alt="Navbar Logo"
           /></a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler custom-toggler"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNavDropdown"
@@ -427,7 +427,7 @@
       <div class="contact py-96" data-aos="fade-up">
         <div class="container">
           <div class="text-center">
-            <h2 class="text-primary-500">Contact Us</h2>
+            <h2 class="">Contact Us</h2>
             <p class="text-grey-300 contact__text">
               Dedicated to accelerating the growth of brands and creating desire
               among their target audience.
