--- a/html/service.html
+++ b/html/service.html
@@ -107,7 +107,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
                       <button
-                        class="accordion-button collapsed text-grey-300"
+                        class="accordion-button collapsed fw-600 text-grey-300"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne"
@@ -134,7 +134,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingTwo">
                       <button
-                        class="accordion-button collapsed"
+                        class="accordion-button collapsed fw-600"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseTwo"
@@ -162,7 +162,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingThree">
                       <button
-                        class="accordion-button collapsed"
+                        class="accordion-button collapsed fw-600"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseThree"
@@ -223,7 +223,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingFour">
                       <button
-                        class="accordion-button collapsed text-grey-300"
+                        class="accordion-button collapsed fw-600 text-grey-300"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseFour"
@@ -250,7 +250,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingFive">
                       <button
-                        class="accordion-button collapsed"
+                        class="accordion-button collapsed fw-600"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseFive"
@@ -278,7 +278,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingSix">
                       <button
-                        class="accordion-button collapsed"
+                        class="accordion-button collapsed fw-600"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseSix"
@@ -328,7 +328,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingSeven">
                       <button
-                        class="accordion-button collapsed text-grey-300"
+                        class="accordion-button collapsed fw-600 text-grey-300"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseSeven"
@@ -355,7 +355,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingEight">
                       <button
-                        class="accordion-button collapsed"
+                        class="accordion-button collapsed fw-600"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseEight"
@@ -383,7 +383,7 @@
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingNine">
                       <button
-                        class="accordion-button collapsed"
+                        class="accordion-button collapsed fw-600"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseNine"
