--- a/index.html
+++ b/index.html
@@ -83,11 +83,50 @@
                 </div>
               </div>
               <div class="col-lg-6 col-md-6 col-12">
-                <div class="d-flex justify-content-end">
-                  <img
-                    src="./assets/image/banner-image.png"
-                    alt="Banner Image"
-                  />
+                <div class="bannerRight__image">
+                  <div class="mobile-screen">
+                    <div class="slider">
+                      <div class="slides">
+                        <div class="slide">
+                          <img src="./assets/image/abcd2.png" alt="Image 1" />
+                        </div>
+                        <div class="slide">
+                          <img
+                            src="./assets/image/caseStudies.png"
+                            alt="Image 2"
+                          />
+                        </div>
+                        <div class="slide">
+                          <img src="./assets/image/abcd1.png" alt="Image 3" />
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div
+                    class="bannerRight__client banner__right d-flex gap-3 justify-content-between"
+                  >
+                    <div class="bannerRight__client-content">
+                      <p class="fs-14 m-0">Client</p>
+                      <h4 class="text-primary-500 fw-600 m-0">75%</h4>
+                    </div>
+                    <img src="./assets/icons/banner-client.svg" alt="" />
+                  </div>
+                  <div class="bannerRight__rating banner__right">
+                    <p class="fs-14 m-0">4 Overall Rating</p>
+                    <div>
+                      <img src="./assets/icons/fullStart.svg" alt="" />
+                      <img src="./assets/icons/fullStart.svg" alt="" />
+                      <img src="./assets/icons/fullStart.svg" alt="" />
+                      <img src="./assets/icons/fullStart.svg" alt="" />
+                      <img src="./assets/icons/emptyStart.svg" alt="" />
+                    </div>
+                  </div>
+                  <div class="bannerRight__brand banner__right">
+                    <div class="bannerRight__brand-content">
+                      <p class="fs-14 m-0">Brands Accelerated</p>
+                      <h4 class="text-primary-500 fw-600 m-0">10+</h4>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
